Added css file. The layout is similar to the orginal webpage. No color and background picture

--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <html>
 
 <head>
+  <link rel="stylesheet" href="sample.css" type="text/css" />
   <title>Governement of India, Department of Agriculture and Cooperation, Ministry of Agriculture</title>
-  <a href= "#">Skip to Main Content</a> 
-  <a href= "#">Screen Reader Access</a>
-  <a href= "#">Text Size</a>
-  <a href= "#">Color</a>
-  <a href= "#"> हिंदी में </a>
-  <a href= "#">Follow us on Twitter</a>
-  <h1>Department of Agriculture and Cooperation</h1>
-  <h2>Ministry of Agriculture, Governement of India</h2>
-  <h3>KISAN CALL CENTER <br/>1800 180 1551</h3>
+  
 </head>
 
 <body>
+  <header>
+    <a href= "#">Skip to Main Content</a> 
+    <a href= "#">Screen Reader Access</a>
+    <a href= "#">Text Size</a>
+    <a href= "#">Color</a>
+    <a href= "#"> हिंदी में </a>
+    <a href= "#">Follow us on Twitter</a>
+    <h1>Department of Agriculture and Cooperation</h1>
+    <h2>Ministry of Agriculture, Governement of India</h2>
+    <h3>KISAN CALL CENTER <br/>1800 180 1551</h3>
+  </header>
 
-  <nav>
+  <nav align='center'>
     <a href="#">Home</a>
     <a href="#">Acts &amp; Rules</a>
     <a href="#">Citizen Charter</a>
@@ -39,8 +43,6 @@
         <li><a href="#">Programmes &amp; Schemes</a></li>
         <li><a href="#">Agriculture Contigency Plan</a></li>
       </ul>
-    </nav>
-    <nav>
       <ul>
         <li><a href="#">Circulars and Notifications</a></li>
         <li><a href="#">CACP</a></li>
@@ -51,8 +53,7 @@
         <li><a href="#">Related Links</a></li>
       </ul>
     </nav>
-    
-    <main>
+    <div>
       <div>
         <h3>Recent Initiatives</h3>
         <ul>
@@ -82,18 +83,20 @@
           <li>Report on testing of fruits and vegetable samples in Delhi for Pesticide Residues.New</li>
         </ul>
       </div>
-    </main>
+    </div>
   </section>
 
   <footer>
-    <a href="#">Home</a>
-    <a href="#">Archives</a>
-    <a href="#">Vigilance</a>
-    <a href="#">RTI</a>
-    <a href="#">Download Forms</a>
-    <a href="#">Sitemap</a>
-    <a href="#">Accessbility Statement</a>
-    <a href="#">Website Policy</a>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Archives</a>
+      <a href="#">Vigilance</a>
+      <a href="#">RTI</a>
+      <a href="#">Download Forms</a>
+      <a href="#">Sitemap</a>
+      <a href="#">Accessbility Statement</a>
+      <a href="#">Website Policy</a>
+    </nav>
 
     <p>This site is best viewed on IE 8 and Higher Versions</p> 
     <p>This website belongs to Department of Agriculture &amp; Cooperation</p>
